--- a/scripts/html/grand-atlast.html
+++ b/scripts/html/grand-atlast.html
@@ -1,11 +1,24 @@
 <html>
 <head>
-<title>page title</title>
+<style>
+
+</style>
+<title>Nantes Cool Challange</title>
+<link rel="stylesheet" href="../css/menustyle.css">
 </head>
 <body>
 
-<h1>This is a heading</h1>
-<p>This is a paragraph.</p>
+<div class="menutab">
+<h2 class="menubutton">Home</h2>
+<h2 class="menubutton">Map</h2>
+</div>
+
+<h1>The Southern African Map</h1>
+<div class="home_main_paragraph">
+    <p>This is my cool project. a Detailed map of Southern Africa that one can interact. Click on counties to zoom in and see further information.</p>
+    <p>counties on the map are South Africa, Eswatini, Lesotho, Mozambique, Zimbabwe, Botswana and Namibia</p>
+</div>
+
 
 </body>
 </html>
