--- a/scripts/html/grand-atlast.html
+++ b/scripts/html/grand-atlast.html
@@ -9,8 +9,8 @@
 <body>
 
 <div class="menutab">
-<h2 class="menubutton">Home</h2>
-<h2 class="menubutton">Map</h2>
+<button type="button" onclick="myFunction()" class="tabbutton">Home</button>
+<button type="button" onclick="myFunction()" class="tabbutton">Map</button>
 </div>
 
 <h1>The Southern African Map</h1>
@@ -18,6 +18,10 @@
     <p>This is my cool project. a Detailed map of Southern Africa that one can interact. Click on counties to zoom in and see further information.</p>
     <p>counties on the map are South Africa, Eswatini, Lesotho, Mozambique, Zimbabwe, Botswana and Namibia</p>
 </div>
+
+<button type="button" onclick="myFunction()" class="zimbabwebut">
+
+</button>
 
 
 </body>
