map_div_centering

--- a/scripts/html/grand-atlast.html
+++ b/scripts/html/grand-atlast.html
@@ -19,9 +19,12 @@
     <p>counties on the map are South Africa, Eswatini, Lesotho, Mozambique, Zimbabwe, Botswana and Namibia</p>
 </div>
 
+
+<div class="midcenter">
 <button type="button" onclick="myFunction()" class="zimbabwebut">
 
 </button>
+</div>
 
 
 </body>
