--- a/scripts/html/grand-atlast.html
+++ b/scripts/html/grand-atlast.html
@@ -6,7 +6,7 @@
 <title>Nantes Cool Challange</title>
 <link rel="stylesheet" href="../css/menustyle.css">
 </head>
-<body>
+<body id="body">
 
 
 <div class="menutab">
@@ -15,12 +15,16 @@
 </div>
 
 <script>
+
+    const body = document.getElementById('body')
+    
     function transitionMap () {
         const mappage = document.getElementById('mapbox');
         const homepage = document.getElementById('homepage');
         mappage.classList.add ('map')
         mappage.classList.remove('hidden')
-        homepage.classList.toggle('hidden')
+        homepage.classList.add('hidden')
+        mappage.classList.remove('homepage')
     }
 </script>
 
@@ -36,6 +40,10 @@
 <button type="button" onclick="myFunction()" class="zimbabwebut mappoint">
 </button>
 <button type="button" onclick="myFunction()" class="sabut mappoint">
+</button>
+<button type="button" onclick="myFunction()" class="namibiabut mappoint">
+</button>
+<button type="button" onclick="myFunction()" class="botswanabut mappoint">
 </button>
 </div>
 
