--- a/scripts/html/grand-atlast.html
+++ b/scripts/html/grand-atlast.html
@@ -19,8 +19,8 @@
 
 <div class="home_main_paragraph" id="homepage">
     <h1>The Southern African Map</h1>
-    <p>This is my cool project. a Detailed map of Southern Africa that one can interact. Click on counties to zoom in and see further information.</p>
-    <p>counties on the map are South Africa, Eswatini, Lesotho, Mozambique, Zimbabwe, Botswana and Namibia</p>
+    <p>This is my cool project. a Detailed map of Southern Africa that one can interact. Click on countries to zoom in and see further information.</p>
+    <p>counties on the map are South Africa, Mozambique, Zimbabwe, Botswana and Namibia</p>
 </div>
 
 <div class= "mapinfo" id="mapinfo">
